added small bio to contact

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -9,7 +9,7 @@
     {
         "title": "Cloud9 Calm Co.",
         "url": "cloud9calm.com",
-        "description": "A freelance project in progress: building a Shopify store for Cloud9 Calm Co., featuring custom designs and functionalities.",
+        "description": "A freelance project in progress: building a website for Cloud9 Calm Co., featuring custom designs and functionalities.",
         "techStack": ["React", "Tailwind CSS", "JavaScript"]
     },
     {
