--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erin-cronie-portfolio",
-  "homepage": "https://erincronie.github.io/erin-cronie-portfolio",
+  "homepage": "https://erincronie.github.io/erin-cronie-portfolio-2.0/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
