updated tech stack on cloud9calm.com

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -10,7 +10,7 @@
         "title": "Cloud9 Calm Co.",
         "url": "cloud9calm.com",
         "description": "A freelance project in progress: building a website for Cloud9 Calm Co., featuring custom designs and functionalities.",
-        "techStack": ["React", "Tailwind CSS", "JavaScript"]
+        "techStack": ["WebFlow"]
     },
     {
         "title": "Shop Cloud9 Calm",
