--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "sass": "^1.71.1",
