projects and social media updated

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -15,7 +15,7 @@
     {
         "title": "Shop Cloud9 Calm",
         "url": "shopcloud9calm.com",
-        "description": "An ongoing project: development of a Shopify store for Cloud9 Calm.",
+        "description": "Official Shopify Store for Cloud9 Calm Co.",
         "techStack": ["Shopify", "Shopify Liquid", "Shopify APIs"]
     },
     {
