--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erin-cronie-portfolio",
-  "homepage": "https://cloud9calmgithub.io/erin-cronie-portfolio-2.0",
+  "homepage": "https://erincronie.me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
