--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.7",
     "emailjs-com": "^3.2.0",
     "env": "^0.0.2",
+    "framer-motion": "^11.11.9",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
@@ -21,15 +22,15 @@
     "sitemap": "^8.0.0",
     "web-vitals": "^2.1.4"
   },
-"scripts": {
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "generate-sitemap": "node scripts/sitemap-generator.js"
-},
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "generate-sitemap": "node scripts/sitemap-generator.js"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
